# block_blast_rust

./: Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  build_wasm_clean.bat  canvas_fixer.js  connected_regions_improvement.md  dev_session_summary_20240717.md  difficulty_scoring_improvement.md  dynamic_level_ideas.md  index_template.html  js_bridge.js  macroquad_wasm_js_extra.md  minigame_config.json  run_game.bat  serve.py
.cursor/rules/: block_blast_rust_docs.mdc  common.mdc  macroquad-game.mdc  rules.mdc
src/: block.rs  cloud.rs  constants.rs  drawing.rs  effects.rs  grid.rs  lib.rs  log.rs  main.rs  minimal.rs  random.rs  save.rs  ui.rs  utils.rs  wasm_lib.rs.disabled  wave.rs
web/: games.json  landscape.html  loader.html
