[package] 
name = "block_blast" 
version = "0.1.0" 
edition = "2021" 
 
[dependencies] 
macroquad = "0.4"
miniquad = "0.4"
once_cell = "1.8"
 
[lib] 
name = "block_blast" 
path = "src/lib.rs" 
crate-type = ["cdylib", "rlib"] 
 
[[bin]] 
name = "block_blast_bin" 
path = "src/main.rs"
 
[profile.release] 
opt-level = 2 
lto = "thin" 
